// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Expired Password Warning Authenticator Transformer Tests should add updated title element and submit button elements w/ 0 days to expire to UI Schema 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "confirmPassword": Object {
      "validate": [Function],
    },
    "credentials.passcode": Object {
      "validate": [Function],
    },
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "password.expiring.today",
        },
        "type": "Title",
      },
      Object {
        "options": Object {
          "header": "password.complexity.requirements.header",
          "id": "password-authenticator--list",
          "requirements": Array [],
          "settings": Object {
            "complexity": Object {},
            "daysToExpiry": 0,
          },
          "userInfo": Object {
            "identifier": "someuser@noemail.com",
          },
          "validationDelayMs": 50,
        },
        "type": "PasswordRequirements",
      },
      Object {
        "noMargin": true,
        "options": Object {
          "name": "username",
          "value": "someuser@noemail.com",
        },
        "type": "HiddenInput",
      },
      Object {
        "label": "Password",
        "options": Object {
          "attributes": Object {
            "autocomplete": "new-password",
          },
          "inputMeta": Object {
            "name": "credentials.passcode",
            "secret": true,
          },
        },
        "type": "Field",
      },
      Object {
        "key": "confirmPassword",
        "label": "oie.password.confirmPasswordLabel",
        "options": Object {
          "attributes": Object {
            "autocomplete": "new-password",
          },
          "inputMeta": Object {
            "messages": Object {
              "value": undefined,
            },
            "name": "confirmPassword",
            "secret": true,
          },
        },
        "type": "Field",
      },
      Object {
        "label": "password.expired.submit",
        "options": Object {
          "step": "reenroll-authenticator-warning",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Expired Password Warning Authenticator Transformer Tests should add updated title element and submit button elements w/ 5 days to expire to UI Schema 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "confirmPassword": Object {
      "validate": [Function],
    },
    "credentials.passcode": Object {
      "validate": [Function],
    },
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "password.expiring.title",
        },
        "type": "Title",
      },
      Object {
        "options": Object {
          "header": "password.complexity.requirements.header",
          "id": "password-authenticator--list",
          "requirements": Array [],
          "settings": Object {
            "complexity": Object {},
            "daysToExpiry": 5,
          },
          "userInfo": Object {
            "identifier": "someuser@noemail.com",
          },
          "validationDelayMs": 50,
        },
        "type": "PasswordRequirements",
      },
      Object {
        "noMargin": true,
        "options": Object {
          "name": "username",
          "value": "someuser@noemail.com",
        },
        "type": "HiddenInput",
      },
      Object {
        "label": "Password",
        "options": Object {
          "attributes": Object {
            "autocomplete": "new-password",
          },
          "inputMeta": Object {
            "name": "credentials.passcode",
            "secret": true,
          },
        },
        "type": "Field",
      },
      Object {
        "key": "confirmPassword",
        "label": "oie.password.confirmPasswordLabel",
        "options": Object {
          "attributes": Object {
            "autocomplete": "new-password",
          },
          "inputMeta": Object {
            "messages": Object {
              "value": undefined,
            },
            "name": "confirmPassword",
            "secret": true,
          },
        },
        "type": "Field",
      },
      Object {
        "label": "password.expired.submit",
        "options": Object {
          "step": "reenroll-authenticator-warning",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Expired Password Warning Authenticator Transformer Tests should add updated title element and submit button elements when daysToExpire is not present to UI Schema 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "confirmPassword": Object {
      "validate": [Function],
    },
    "credentials.passcode": Object {
      "validate": [Function],
    },
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "password.expiring.soon",
        },
        "type": "Title",
      },
      Object {
        "options": Object {
          "header": "password.complexity.requirements.header",
          "id": "password-authenticator--list",
          "requirements": Array [],
          "settings": Object {
            "complexity": Object {},
          },
          "userInfo": Object {
            "identifier": "someuser@noemail.com",
          },
          "validationDelayMs": 50,
        },
        "type": "PasswordRequirements",
      },
      Object {
        "noMargin": true,
        "options": Object {
          "name": "username",
          "value": "someuser@noemail.com",
        },
        "type": "HiddenInput",
      },
      Object {
        "label": "Password",
        "options": Object {
          "attributes": Object {
            "autocomplete": "new-password",
          },
          "inputMeta": Object {
            "name": "credentials.passcode",
            "secret": true,
          },
        },
        "type": "Field",
      },
      Object {
        "key": "confirmPassword",
        "label": "oie.password.confirmPasswordLabel",
        "options": Object {
          "attributes": Object {
            "autocomplete": "new-password",
          },
          "inputMeta": Object {
            "messages": Object {
              "value": undefined,
            },
            "name": "confirmPassword",
            "secret": true,
          },
        },
        "type": "Field",
      },
      Object {
        "label": "password.expired.submit",
        "options": Object {
          "step": "reenroll-authenticator-warning",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Expired Password Warning Authenticator Transformer Tests should add updated title element, submit button and skip button elements to UI Schema for expired PW step with skip remediation in the transaction 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "confirmPassword": Object {
      "validate": [Function],
    },
    "credentials.passcode": Object {
      "validate": [Function],
    },
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "password.expiring.soon",
        },
        "type": "Title",
      },
      Object {
        "options": Object {
          "header": "password.complexity.requirements.header",
          "id": "password-authenticator--list",
          "requirements": Array [],
          "settings": Object {
            "complexity": Object {},
          },
          "userInfo": Object {
            "identifier": "someuser@noemail.com",
          },
          "validationDelayMs": 50,
        },
        "type": "PasswordRequirements",
      },
      Object {
        "noMargin": true,
        "options": Object {
          "name": "username",
          "value": "someuser@noemail.com",
        },
        "type": "HiddenInput",
      },
      Object {
        "label": "Password",
        "options": Object {
          "attributes": Object {
            "autocomplete": "new-password",
          },
          "inputMeta": Object {
            "name": "credentials.passcode",
            "secret": true,
          },
        },
        "type": "Field",
      },
      Object {
        "key": "confirmPassword",
        "label": "oie.password.confirmPasswordLabel",
        "options": Object {
          "attributes": Object {
            "autocomplete": "new-password",
          },
          "inputMeta": Object {
            "messages": Object {
              "value": undefined,
            },
            "name": "confirmPassword",
            "secret": true,
          },
        },
        "type": "Field",
      },
      Object {
        "label": "password.expired.submit",
        "options": Object {
          "step": "reenroll-authenticator-warning",
          "type": "submit",
        },
        "type": "Button",
      },
      Object {
        "label": "password.expiring.later",
        "options": Object {
          "step": "skip",
          "type": "button",
          "variant": "floating",
          "wide": false,
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Expired Password Warning Authenticator Transformer Tests should add updated title element, submit button, and additional subtitle elements to UI Schema for expired PW step with brandName provided 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "confirmPassword": Object {
      "validate": [Function],
    },
    "credentials.passcode": Object {
      "validate": [Function],
    },
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "password.expiring.soon",
        },
        "type": "Title",
      },
      Object {
        "options": Object {
          "content": "password.expiring.subtitle.specific",
        },
        "type": "Description",
      },
      Object {
        "options": Object {
          "header": "password.complexity.requirements.header",
          "id": "password-authenticator--list",
          "requirements": Array [],
          "settings": Object {
            "complexity": Object {},
          },
          "userInfo": Object {
            "identifier": "someuser@noemail.com",
          },
          "validationDelayMs": 50,
        },
        "type": "PasswordRequirements",
      },
      Object {
        "noMargin": true,
        "options": Object {
          "name": "username",
          "value": "someuser@noemail.com",
        },
        "type": "HiddenInput",
      },
      Object {
        "label": "Password",
        "options": Object {
          "attributes": Object {
            "autocomplete": "new-password",
          },
          "inputMeta": Object {
            "name": "credentials.passcode",
            "secret": true,
          },
        },
        "type": "Field",
      },
      Object {
        "key": "confirmPassword",
        "label": "oie.password.confirmPasswordLabel",
        "options": Object {
          "attributes": Object {
            "autocomplete": "new-password",
          },
          "inputMeta": Object {
            "messages": Object {
              "value": undefined,
            },
            "name": "confirmPassword",
            "secret": true,
          },
        },
        "type": "Field",
      },
      Object {
        "label": "password.expired.submit",
        "options": Object {
          "step": "reenroll-authenticator-warning",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Expired Password Warning Authenticator Transformer Tests should add updated title element, submit button, and additional subtitle elements to UI Schema for expired PW step with messages in the transaction 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "confirmPassword": Object {
      "validate": [Function],
    },
    "credentials.passcode": Object {
      "validate": [Function],
    },
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "password.expiring.soon",
        },
        "type": "Title",
      },
      Object {
        "options": Object {
          "content": "When your password is locked, you cannot access the account",
        },
        "type": "Description",
      },
      Object {
        "options": Object {
          "header": "password.complexity.requirements.header",
          "id": "password-authenticator--list",
          "requirements": Array [],
          "settings": Object {
            "complexity": Object {},
          },
          "userInfo": Object {
            "identifier": "someuser@noemail.com",
          },
          "validationDelayMs": 50,
        },
        "type": "PasswordRequirements",
      },
      Object {
        "noMargin": true,
        "options": Object {
          "name": "username",
          "value": "someuser@noemail.com",
        },
        "type": "HiddenInput",
      },
      Object {
        "label": "Password",
        "options": Object {
          "attributes": Object {
            "autocomplete": "new-password",
          },
          "inputMeta": Object {
            "name": "credentials.passcode",
            "secret": true,
          },
        },
        "type": "Field",
      },
      Object {
        "key": "confirmPassword",
        "label": "oie.password.confirmPasswordLabel",
        "options": Object {
          "attributes": Object {
            "autocomplete": "new-password",
          },
          "inputMeta": Object {
            "messages": Object {
              "value": undefined,
            },
            "name": "confirmPassword",
            "secret": true,
          },
        },
        "type": "Field",
      },
      Object {
        "label": "password.expired.submit",
        "options": Object {
          "step": "reenroll-authenticator-warning",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
